--- a/exemple1.html
+++ b/exemple1.html
@@ -6,22 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.js"
+    integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous" defer></script>
 </head>
 
 <body>
     <h1>Formulaire</h1>
     <form action="" method="POST" role="form">
-        <label for="nom">Nom</label>
-        <input type="text" name="nom">
-        <label for="prenom">Nom</label>
-        <input type="text" name="prenom">
-        <label for="mail">Email</label>
-        <input type="email" name="mail">
-        <label for="message">message</label>
-        <input type="text" name="message">
+        <ul>
+            <li><label for="nom">Nom</label></li>
+            <li> <input type="text" name="nom"></li>
 
-        <input type="sumit" value="envoyer">
+            <li> <label for="prenom">Prénom</label></li>
+            <li> <input type="text" name="prenom"></li>
+
+            <li><label for="mail">Email</label></li>
+            <li> <input type="email" name="mail"></li>
+
+            <li> <label for="message">message</label></li>
+            <li> <input type="text" name="message"></li>
+
+            <li><input type="sumit" value="envoyer"></li>
+        </ul>
     </form>
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.js"
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 </body>
 
 </html>
