--- a/exemple1.html
+++ b/exemple1.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"
     integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous" defer></script>
+    <script src="function.js" defer></script>
 </head>
 
 <body>
@@ -15,24 +16,21 @@
     <form action="" method="POST" role="form">
         <ul>
             <li><label for="nom">Nom</label></li>
-            <li> <input type="text" name="nom"></li>
+            <li> <input id="nom" type="text" name="nom"></li>
 
             <li> <label for="prenom">Prénom</label></li>
-            <li> <input type="text" name="prenom"></li>
+            <li> <input id="prenom" type="text" name="prenom"></li>
 
             <li><label for="mail">Email</label></li>
-            <li> <input type="email" name="mail"></li>
+            <li> <input id="mail" type="email" name="mail"></li>
 
             <li> <label for="message">message</label></li>
-            <li> <input type="text" name="message"></li>
+            <li> <textarea id="message" type="text" name="message" cols="80"></textarea></li>
 
-            <li><input type="sumit" value="envoyer"></li>
+            <li><input type="submit" value="envoyer"></li>
         </ul>
     </form>
 
-
-    <script src="https://code.jquery.com/jquery-3.5.1.js"
-        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 </body>
 
 </html>
