--- a/exemple1.html
+++ b/exemple1.html
@@ -15,16 +15,16 @@
     <h1>Formulaire</h1>
     <form action="" method="POST" role="form">
         <ul>
-            <li><label for="nom">Nom</label></li>
+            <li><label for="nom">Nom :</label></li>
             <li> <input id="nom" type="text" name="nom"></li>
 
-            <li> <label for="prenom">Prénom</label></li>
+            <li> <label for="prenom">Prénom :</label></li>
             <li> <input id="prenom" type="text" name="prenom"></li>
 
-            <li><label for="mail">Email</label></li>
-            <li> <input id="mail" type="email" name="mail"></li>
+            <li><label for="email">Email :</label></li>
+            <li> <input id="email" type="email" name="email"></li>
 
-            <li> <label for="message">message</label></li>
+            <li> <label for="message">Votre message :</label></li>
             <li> <textarea id="message" type="text" name="message" cols="80"></textarea></li>
 
             <li><input type="submit" value="envoyer"></li>
